--- a/AutoApexImport.csproj
+++ b/AutoApexImport.csproj
@@ -7,4 +7,9 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="DotNetEnv" Version="3.1.1" />
+      <PackageReference Include="Selenium.WebDriver" Version="4.35.0" />
+    </ItemGroup>
+
 </Project>
