--- a/AutoApexImport.csproj
+++ b/AutoApexImport.csproj
@@ -10,6 +10,7 @@
     <ItemGroup>
       <PackageReference Include="DotNetEnv" Version="3.1.1" />
       <PackageReference Include="EPPlus" Version="8.1.0" />
+      <PackageReference Include="Selenium.Support" Version="4.35.0" />
       <PackageReference Include="Selenium.WebDriver" Version="4.35.0" />
     </ItemGroup>
 
